syntax = "proto3";
message NotesRequest
{
    int32 type = 1;//操作类型
    string ID = 2;
    string name = 3;
    double lat = 4;
    double lon = 5;
    string notes = 6;
    string color = 7;
    string drawman = 8;
    bool isshare = 9;
}

message NotesRepsone
{
    int32 type = 1;//操作类型
    string result = 2;
    repeated NotesRequest Notess = 3;
}